force-app/main/default/objects/RevRecOpportunityLineItem__c/RevRecOpportunityLineItem__c.object-meta.xml
<CustomObject>
    <label>RevRecOpportunityLineItem</label>
    <nameField>
        <label>Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RevRecOpportunityLineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>