force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Allocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Amount__c</fullName>
    <label>Allocated Amount</label>
    <summarizedField>RevRecOpportunityLineItemSchedule__c.RecognizedRevTotal__c</summarizedField>
    <summaryForeignKey>RevRecOpportunityLineItemSchedule__c.RevRecOpportunityLineItem__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>