force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/CalculatedAt__c.field-meta.xml
<CustomField>
    <fullName>CalculatedAt__c</fullName>
    <label>Date Calculated</label>
    <type>Date</type>
</CustomField>