force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Converted_Recognized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Converted_Recognized_Amount__c</fullName>
    <label>Converted Recognized Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>