force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Converted_ResAmount__c.field-meta.xml
<CustomField>
    <fullName>Converted_ResAmount__c</fullName>
    <label>Converted Residual Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>