force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Converted_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Converted_Total_Amount__c</fullName>
    <label>Converted Total Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>