force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Cor_Allocated_Amt__c.field-meta.xml
<CustomField>
    <fullName>Cor_Allocated_Amt__c</fullName>
    <label>Corporate Allocated Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>