force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Cor_Def_Amt__c.field-meta.xml
<CustomField>
    <fullName>Cor_Def_Amt__c</fullName>
    <label>Corporate Deferred Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>