force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Cor_Rec_Amt_Wei__c.field-meta.xml
<CustomField>
    <fullName>Cor_Rec_Amt_Wei__c</fullName>
    <label>Corporate Recognized Amount (Weighted)-D</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>