force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Cor_Rec_Rev_Wei1__c.field-meta.xml
<CustomField>
    <fullName>Cor_Rec_Rev_Wei1__c</fullName>
    <label>Corporate Recognized Revenue (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>