force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Cor_Res_Amt_Wei__c.field-meta.xml
<CustomField>
    <fullName>Cor_Res_Amt_Wei__c</fullName>
    <label>Corporate Residual Amount (Weighted)-Del</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>