force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Cor_Total_Amt__c.field-meta.xml
<CustomField>
    <fullName>Cor_Total_Amt__c</fullName>
    <label>Corporate Total Amount-Delete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>