force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Cor_Total_Amt_Wei1__c.field-meta.xml
<CustomField>
    <fullName>Cor_Total_Amt_Wei1__c</fullName>
    <label>Corporate Total Amount (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>