force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Cor_Total_Amt_Wei__c.field-meta.xml
<CustomField>
    <fullName>Cor_Total_Amt_Wei__c</fullName>
    <label>Corporate Total Amount (Weighted)-Delete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>