force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/ForeRevWei__c.field-meta.xml
<CustomField>
    <fullName>ForeRevWei__c</fullName>
    <label>Forecasted Revenue (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>