force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/No_Of_Overriden__c.field-meta.xml
<CustomField>
    <fullName>No_Of_Overriden__c</fullName>
    <label>No Of Overriden</label>
    <summaryForeignKey>RevRecProductRule__c.RevRecOpportunityLineItem__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>