force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/OpportunityLineItemId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemId__c</fullName>
    <label>OpportunityLineItemId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>