force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Overriden__c.field-meta.xml
<CustomField>
    <fullName>Overriden__c</fullName>
    <formula>IF(No_Of_Overriden__c &gt; 0 , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overriden</label>
    <type>Checkbox</type>
</CustomField>