force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/RecRevWei__c.field-meta.xml
<CustomField>
    <fullName>RecRevWei__c</fullName>
    <label>Recognized Revenue (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>