force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Remaining_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Percentage__c</fullName>
    <label>Remaining Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>