force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/ResAmtWei__c.field-meta.xml
<CustomField>
    <fullName>ResAmtWei__c</fullName>
    <label>Residual Amount (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>