force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/ResidualAmount__c.field-meta.xml
<CustomField>
    <fullName>ResidualAmount__c</fullName>
    <label>Residual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>