force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Rule_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Rule_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule Assignment</label>
    <referenceTo>Rule_Assignment__c</referenceTo>
    <relationshipLabel>RevRecOpportunityLineItems</relationshipLabel>
    <relationshipName>RevRecOpportunityLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>