force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/Total_Amt_Wei__c.field-meta.xml
<CustomField>
    <fullName>Total_Amt_Wei__c</fullName>
    <label>Total Amount (Weighted)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>