force-app/main/default/objects/RevRecOpportunityLineItem__c/fields/TotalRev__c.field-meta.xml
<CustomField>
    <fullName>TotalRev__c</fullName>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>